# m365-copilot-adoption-command-center

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  setup.py  vite.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  deploy.yml
backend/app/: agents.py  data.py  main.py  models.py  snowflake_service.py
cloudflare/: worker.ts
docs/: champion_launch_kit.md  copilot_business_case_playbook.md  copilot_readiness_assessment.md  demo_script_english.md  english_technical_qna.md  facilitation_toolkit.md  feedback_support_operating_model.md  interview_storyline.md  jd_alignment_matrix.md  multi_geo_change_comms.md  production_hardening.md  prompt_review_standard.md  role_fit.md  star_story_bank.md  thirty_sixty_ninety_plan.md  value_realization_kpi_dictionary.md
infra/k8s/: app-stack.yaml
scripts/: export_cloudflare_data.py
src/: App.tsx  styles.css  types.ts
src/test/: App.test.tsx  worker.test.ts
tests/: test_api.py  test_snowflake.py
