[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m365-copilot-adoption-command-center"
version = "0.1.0"
description = "Interview-ready Microsoft 365 Copilot adoption project with React, FastAPI, readiness planning, and value realization artifacts."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111,<1.0",
  "snowflake-connector-python>=3.17,<4.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
